--- a/frontend/src/components/compstyle.css
+++ b/frontend/src/components/compstyle.css
@@ -8,7 +8,7 @@
 .main-content-container {
   display: flex;
   flex: 1;
-  margin-top: 10vh; /* Matches topbar height */
+  margin-top: 0vh; /* Matches topbar height */
 }
 
 /* Sidebar Styles */
@@ -100,6 +100,10 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.badge {
+  font-size: 0.75rem;
+  padding: 0.4em 0.6em;
 }
 
 /* Responsive Adjustments */
